# auto-job-scraper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/auto_job_scraper/: __init__.py  cli.py  config.py  cv_parser.py  display.py  exporter.py  models.py  profile.py  scoring.py  scraper.py  wizard.py
src/auto_job_scraper/boards/: __init__.py  base.py  workable.py
src/workable_scraper/: __init__.py  cli.py  config.py  cv_parser.py  display.py  exporter.py  models.py  profile.py  scoring.py  scraper.py  wizard.py
